--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "qrcode-terminal": "^0.12.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
